<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JPush!</string>
    <string name="app_name">TvPanda</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="loin">点击登入</string>
    <string name="mine_my_help">我要当主播</string>
    <string name="mine_follow">我的订购</string>
    <string name="mine_history">观看历史</string>
    <string name="mine_lishi">私信</string>
    <string name="mine_activity">活动中心</string>
    <string name="mine_remind">开播提醒</string>
    <string name="mine_feedback">意见反馈</string>
</resources>
