<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGrayLineX"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dian_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:padding="@dimen/dian_5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_avatar_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/mine_loin"
                android:text="@string/loin"
                android:textColor="@color/colorTextGrayLineT"/>

            <ImageView
                android:id="@+id/mine_loin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dian_5dp"
                android:src="@mipmap/ic_right_p"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <!--===============我要当主播==================================-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dian_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dian_40dp"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/dian_5dp"
            android:paddingLeft="@dimen/dian_10dp"
            android:paddingRight="@dimen/dian_10dp"
            android:paddingTop="@dimen/dian_5dp">

            <ImageView
                android:id="@+id/mine_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_profile_apply_host"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dian_10dp"
                android:layout_toRightOf="@+id/mine_profile"
                android:text="@string/mine_my_help"
                android:textColor="@color/colorDarkBlue"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dian_5dp"
                android:src="@mipmap/ic_right"/>
        </RelativeLayout>


    </android.support.v7.widget.CardView>
    <!--=====================我的订阅===========================-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dian_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dian_5dp"
            android:paddingRight="@dimen/dian_5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_profile_follow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_follow"
                    android:text="@string/mine_follow"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <!--======================分割线======================================-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"/>
            <!--======================观看历史=========================================-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp"
                android:paddingLeft="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_profile_history"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_history"
                    android:text="@string/mine_history"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!--=====================私信,活动中心,开播提醒,意见反馈==========================-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dian_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dian_5dp"
            android:paddingRight="@dimen/dian_5dp">
            <!--==================私信================================================-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_hover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/chatmessage_xinxi_icon_lishi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_hover"
                    android:text="@string/mine_lishi"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <!--======================分割线======================================-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"/>
            <!--======================活动中心=========================================-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp"
                android:paddingLeft="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_profile_activity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_activity"
                    android:text="@string/mine_activity"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <!--======================分割线======================================-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"/>
            <!--======================开播提醒=========================================-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp"
                android:paddingLeft="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_profile_remind"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_remind"
                    android:text="@string/mine_remind"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
            <!--======================分割线======================================-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayLine"/>
            <!--======================意见反馈=========================================-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dian_40dp"
                android:background="@android:color/white"
                android:padding="@dimen/dian_5dp"
                android:paddingLeft="@dimen/dian_5dp">

                <ImageView
                    android:id="@+id/mine_profile_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_profile_feedback"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dian_10dp"
                    android:layout_toRightOf="@+id/mine_profile_feedback"
                    android:text="@string/mine_feedback"
                    android:textColor="@color/colorDarkBlue"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dian_5dp"
                    android:src="@mipmap/ic_right"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>